--- a/package.json
+++ b/package.json
@@ -5,19 +5,36 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@hookform/resolvers": "^2.9.11",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/lab": "^5.0.0-alpha.123",
+    "@mui/material": "^5.11.13",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
+    "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
+    "caniuse-lite": "^1.0.30001467",
+    "eslint": "^8.36.0",
+    "eslint-config-next": "^13.2.4",
     "next": "12.0.10",
     "next-auth": "^4.20.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-markdown": "8.0.0"
+    "react-hook-form": "^7.43.6",
+    "react-i18next": "^12.2.0",
+    "react-markdown": "8.0.0",
+    "react-router-dom": "^6.9.0",
+    "react-toastify": "^9.1.1",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "17.0.14",
