--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "hello-next",
   "version": "1.0.0",
   "description": "",
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "scripts": {
     "dev": "next",
     "build": "next build",
@@ -23,24 +26,31 @@
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "caniuse-lite": "^1.0.30001467",
+    "cuid": "^3.0.0",
+    "deep-equal": "^2.2.0",
     "eslint": "^8.36.0",
     "eslint-config-next": "^13.2.4",
+    "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
+    "mui": "^0.0.1",
     "next": "12.0.10",
     "next-auth": "^4.20.1",
     "nodemailer": "^6.9.1",
     "react": "^18.2.0",
+    "react-debounce-input": "^3.3.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.6",
     "react-i18next": "^12.2.0",
     "react-markdown": "8.0.0",
     "react-router-dom": "^6.9.0",
     "react-toastify": "^9.1.1",
+    "swr": "^2.1.0",
     "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
     "prisma": "^4.11.0",
-    "typescript": "4.5.5"
+    "typescript": "^4.5.5"
   }
 }
