--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-markdown": "8.0.0",
     "react-router-dom": "^6.9.0",
     "react-toastify": "^9.1.1",
+    "recharts": "^2.5.0",
     "swr": "^2.1.0",
     "yup": "^1.0.2"
   },
