--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^5.11.13",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
+    "@supabase/supabase-js": "^2.15.0",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "caniuse-lite": "^1.0.30001467",
@@ -37,6 +38,7 @@
     "react": "^18.2.0",
     "react-debounce-input": "^3.3.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.43.6",
     "react-i18next": "^12.2.0",
     "react-markdown": "8.0.0",
