--- a/package.json
+++ b/package.json
@@ -27,14 +27,18 @@
     "cuid": "^3.0.0",
     "dayjs": "^1.11.7",
     "deep-equal": "^2.2.0",
+    "dotenv": "^16.0.3",
     "eslint": "^8.36.0",
     "eslint-config-next": "^13.2.4",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.0",
+    "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "mui": "^0.0.1",
     "next": "12.0.10",
     "next-auth": "^4.20.1",
     "nodemailer": "^6.9.1",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-debounce-input": "^3.3.0",
     "react-dom": "^18.2.0",
