--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@mui/lab": "^5.0.0-alpha.123",
     "@mui/material": "^5.11.13",
     "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^4.11.0",
     "@supabase/supabase-js": "^2.15.0",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
@@ -55,7 +54,6 @@
   "devDependencies": {
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
-    "prisma": "^4.11.0",
-    "typescript": "^4.5.5"
+    "typescript": "4.9.5"
   }
 }
