--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "caniuse-lite": "^1.0.30001467",
+    "cookies": "^0.8.0",
     "cuid": "^3.0.0",
     "dayjs": "^1.11.7",
     "deep-equal": "^2.2.0",
@@ -56,5 +57,10 @@
     "@types/node": "17.0.14",
     "@types/react": "17.0.38",
     "typescript": "4.9.5"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
